--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     />
     <!-- Custom CSS -->
     <link href="res/css/main.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <title>Joshua Ibrom</title>
   </head>
   <body class="bg-dark text-light">
