--- a/index.html
+++ b/index.html
@@ -523,8 +523,9 @@
             </form>
           </div>
           <!-- Social Links -->
-          <div class="flex-grow-1 px-5 py-2">
+          <div class="flex-grow-1 px-5 py-2 d-flex flex-column">
             <h2>Find me elsewhere.</h2>
+            <!-- Social Links -->
             <div class="fs-3 d-flex flex-column">
               <!-- Github -->
               <a
@@ -550,6 +551,16 @@
                 <i class="fa-brands fa-linkedin"></i>
                 <p class="mb-0">@Joshua-Ibrom</p>
               </a>
+            </div>
+            <div class="container-fluid flex-grow-1 py-1">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3479.2521232304944!2d-98.5268902839753!3d29.30427916010875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c57620df39603%3A0x6dd54079639010f1!2sTexas%20A%26M%20University-San%20Antonio!5e0!3m2!1sen!2sus!4v1657746786078!5m2!1sen!2sus"
+                style="border: 0"
+                allowfullscreen="false"
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+                class="w-100 h-100 map"
+              ></iframe>
             </div>
           </div>
         </div>
