Changed styling of the about section

--- a/index.html
+++ b/index.html
@@ -342,7 +342,12 @@
       <!-- About -->
       <div id="about" class="container-xl py-5">
         <h1 class="mb-4 mt-2">About.</h1>
-        <h2>Texas A&amp;M - San Antonio</h2>
+        <div
+          class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-lg-baseline"
+        >
+          <h2><strong>Texas A&amp;M - San Antonio</strong></h2>
+          <h3 class="font-urbanist">2017-Current</h3>
+        </div>
         <p>
           As a student at TAMU-SA, I've taken courses in C++, Java, and various
           scripting langauages, as well as a course focusing on mobile
@@ -351,7 +356,12 @@
           becoming a leader within the chapter, assisting with planning meetings
           and other various administrative duties.
         </p>
-        <h2>High School</h2>
+        <div
+          class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-lg-baseline"
+        >
+          <h2><strong>Floresville High School</strong></h2>
+          <h3 class="font-urbranist">2017</h3>
+        </div>
         <p>
           I graduated within the top ten percent from Floresville High School as
           a member of its National Honor Society chapter. While in high school,
@@ -362,13 +372,13 @@
           in my high school's newly-formed VEX Robotics team, as well as our
           CyberPatriot team, where I worked mainly with GNU/Linux systems.
         </p>
-        <h2>Hobbies and Other Interests</h2>
+        <h2><strong>Hobbies and Other Interests</strong></h2>
         <p>
           In addition to my studies, I enjoy coding in my freetime, having
           worked on projets using Python, Java, Flutter, React, and Angular, as
           well as working on my skills as a DJ.
         </p>
-        <h2>Job History</h2>
+        <h2><strong>Job History</strong></h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
           <!-- TAMU-SA UPD: Student Worker Card -->
           <div class="col">
