--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
 
       <!-- Projects -->
       <div id="projects" class="container-xl py-5">
-        <h1 class="mb-4 mt-2">Projects.</h1>
+        <h1 class="mt-2">Projects.</h1>
+        <hr class="mb-4" />
         <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3">
           <!-- joshuaibrom.com Card -->
           <div class="col">
@@ -341,7 +342,8 @@
 
       <!-- About -->
       <div id="about" class="container-xl py-5">
-        <h1 class="mb-4 mt-2">About.</h1>
+        <h1 class="mt-2">About.</h1>
+        <hr class="mb-4" />
         <div
           class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-lg-baseline"
         >
@@ -487,7 +489,8 @@
 
       <!-- Contact -->
       <div id="contact" class="container-xl py-5">
-        <h1 class="mb-4 mt-2">Contact.</h1>
+        <h1 class="mt-2">Contact.</h1>
+        <hr class="mb-4" />
         <div class="d-flex flex-column flex-lg-row">
           <!-- Contact Form -->
           <div class="flex-grow-1 p-5 bg-secondary rounded-2">
