--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Boostrap -->
+    <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -576,6 +576,11 @@
               ></iframe>
             </div>
           </div>
+        </div>
+        <div class="container-fluid py-5 d-flex flex-column align-items-center">
+          <video class="w-75" poster="res/img/new_popbg.png" controls>
+            <source src="res/video/closer.mp4" type="video/mp4" />
+          </video>
         </div>
       </div>
     </div>
