--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         <h2><strong>Hobbies and Other Interests</strong></h2>
         <p>
           In addition to my studies, I enjoy coding in my freetime, having
-          worked on projets using Python, Java, Flutter, React, and Angular, as
+          worked on projects using Python, Java, Flutter, React, and Angular, as
           well as working on my skills as a DJ.
         </p>
         <h2><strong>Job History</strong></h2>
