Added fields for first and last name in contact form

--- a/index.html
+++ b/index.html
@@ -497,6 +497,32 @@
             <!-- Please note that there's no functionality associated with this form. -->
             <h2>Reach out to me!</h2>
             <form class="d-flex flex-column">
+              <!-- First Name -->
+              <div class="form-floating mb-4">
+                <input
+                  id="contactFormFirstName"
+                  type="email"
+                  class="form-control"
+                  placeholder="Mitch"
+                  required
+                />
+                <label for="contactFormFirstName" class="form-label text-dark"
+                  >First name</label
+                >
+              </div>
+              <!-- First Name -->
+              <div class="form-floating mb-4">
+                <input
+                  id="contactFormLastName"
+                  type="email"
+                  class="form-control"
+                  placeholder="Taylor"
+                  required
+                />
+                <label for="contactFormLastName" class="form-label text-dark"
+                  >Last name</label
+                >
+              </div>
               <!-- Email -->
               <div class="form-floating mb-4">
                 <input
