--- a/index.html
+++ b/index.html
@@ -610,5 +610,10 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="py-1 border-top border-secondary text-center">
+      Joshua Ibrom (sk3p7ic), 2022
+    </footer>
   </body>
 </html>
